--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <header>
         <h1>Pizza Casera</h1>
-        <p>Una receta clásica para hacer una deliciosa pizza desde cero con ingredientes frescos. Perfect彼女 para compartir con amigos y familia.</p>
+        <p>Una receta clásica para hacer una deliciosa pizza desde cero con ingredientes frescos. Perfecta para compartir con amigos y familia.</p>
     </header>
 
     <div class="section">
@@ -90,7 +90,7 @@
     </div>
 
     <footer>
-        <p>Receta creada por Grok, inspirada en la tradición italiana y adaptada para el hogar moderno. ¡Buon appetito!</p>
+        <p>Receta creada Oscar Ramirez</p>
     </footer>
 </body>
 </html>
